--- a/app/src/main/res/layout/activity_seleccin_videojuego.xml
+++ b/app/src/main/res/layout/activity_seleccin_videojuego.xml
@@ -93,7 +93,7 @@
     </android.support.design.widget.AppBarLayout>
     <!-- FAB -->
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_carrito"
         android:layout_width="@dimen/size_fab"
         android:layout_height="@dimen/size_fab"
         android:layout_margin="@dimen/fab_margin"
