--- a/app/src/main/res/layout/item_cesta_compra.xml
+++ b/app/src/main/res/layout/item_cesta_compra.xml
@@ -18,12 +18,22 @@
         android:textSize="15sp" />
 
     <TextView
-        android:id="@+id/author"
+        android:id="@+id/carrito_palataforma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/name"
+        android:text="Plataforma"
         android:layout_below="@+id/name"
-        android:text="Autor" />
+        android:layout_alignLeft="@+id/name"
+        android:layout_alignStart="@+id/name" />
+
+    <TextView
+        android:id="@+id/autor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Autor"
+        android:layout_below="@+id/carrito_palataforma"
+        android:layout_alignLeft="@+id/carrito_palataforma"
+        android:layout_alignStart="@+id/carrito_palataforma" />
 
     <ImageView
         android:id="@+id/image"
@@ -45,15 +55,18 @@
         android:layout_alignParentEnd="true"
         android:layout_alignBottom="@+id/image" />
 
-    <ImageButton
+    <TextView
+        android:id="@+id/cantidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
+        android:padding="16dp"
+        android:text="Cantidad: 2"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
         android:layout_alignTop="@+id/price"
-        android:layout_alignLeft="@+id/author"
-        android:layout_alignStart="@+id/author"
-        android:layout_alignBottom="@+id/price"
-        android:layout_alignRight="@+id/name"
-        android:layout_alignEnd="@+id/name" />
+        android:layout_toLeftOf="@+id/price"
+        android:layout_toStartOf="@+id/price"
+        android:layout_marginRight="31dp"
+        android:layout_marginEnd="31dp" />
 
 </RelativeLayout>
