--- a/app/src/main/res/layout/fragmento_grupo_items_carrito.xml
+++ b/app/src/main/res/layout/fragmento_grupo_items_carrito.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -16,8 +17,17 @@
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/reciclador"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="445dp"
         android:scrollbars="vertical"
-        android:padding="3dp" />
+        android:padding="3dp"
+        android:layout_weight="0.50" />
+
+    <Button
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:text="Tramitar pedido"
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal"
+        android:background="@android:color/holo_orange_light" />
 
 </LinearLayout>
