--- a/app/src/main/res/layout/item_lista_direccion.xml
+++ b/app/src/main/res/layout/item_lista_direccion.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/espacio_norma_1">
+    android:padding="@dimen/espacio_norma_1"
+    android:background="#ffffff">
 
     <LinearLayout
         android:layout_width="wrap_content"
