--- a/app/src/main/res/layout/fragmento_tarjetas.xml
+++ b/app/src/main/res/layout/fragmento_tarjetas.xml
@@ -69,5 +69,18 @@
             android:layout_toRightOf="@+id/numero_tarjeta"
             android:layout_below="@+id/fecha" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Predeterminada"
+            android:id="@+id/predeterminada_tarjeta"
+            android:textColor="#ffffff"
+            android:visibility="invisible"
+            android:paddingBottom="5dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/fecha"
+            android:layout_marginLeft="7dp"
+            android:layout_toLeftOf="@+id/fecha" />
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
