--- a/app/src/main/res/layout/item_cesta_compra.xml
+++ b/app/src/main/res/layout/item_cesta_compra.xml
@@ -72,4 +72,16 @@
         android:layout_marginRight="31dp"
         android:layout_marginEnd="31dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SemiNuevo"
+        android:id="@+id/tipo_item"
+        android:textColor="#ffffff"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/price"
+        android:layout_alignEnd="@+id/price"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp" />
+
 </RelativeLayout>
