implementado gestiona productos y gestión pedidos

--- a/app/src/main/res/layout/activity_seleccin_videojuego.xml
+++ b/app/src/main/res/layout/activity_seleccin_videojuego.xml
@@ -196,8 +196,7 @@
             android:id="@+id/detail_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:transitionName="shared_image"
-            android:src="@drawable/battlefield4" />
+            android:transitionName="shared_image" />
 
 
     </android.support.design.widget.AppBarLayout>
