implementado pedidos y registro

--- a/app/src/main/res/layout/activity_cambiar_password.xml
+++ b/app/src/main/res/layout/activity_cambiar_password.xml
@@ -109,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancelar"
-            android:id="@+id/button2"
+            android:id="@+id/cancelar_password"
             android:layout_marginLeft="47dp"
             android:layout_marginStart="47dp"
             android:layout_alignParentBottom="true"
@@ -120,7 +120,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Guardar"
-            android:id="@+id/button3"
+            android:id="@+id/guardar_password"
             android:layout_marginRight="54dp"
             android:layout_marginEnd="54dp"
             android:layout_alignParentBottom="true"
