--- a/app/src/main/res/menu/menu_drawer_admin.xml
+++ b/app/src/main/res/menu/menu_drawer_admin.xml
@@ -5,24 +5,24 @@
         <item
             android:id="@+id/item_gestion_usuarios"
             android:checked="true"
-            android:icon="@drawable/inicio"
+            android:icon="@drawable/ic_supervisor_account"
             android:title="@string/item_gestion_usuarios" />
         <item
             android:id="@+id/item_gestion_proveedores"
-            android:icon="@drawable/configuracion"
+            android:icon="@drawable/ic_work_black"
             android:title="@string/item_gestion_proveedores" />
         <item
             android:id="@+id/item_gestion_pedidos"
-            android:icon="@drawable/cuenta"
+            android:icon="@drawable/categorias"
             android:title="@string/item_gestion_pedidos" />
         <item
             android:id="@+id/item_gestion_videojuegos"
-            android:icon="@drawable/categorias"
+            android:icon="@drawable/ic_store_black"
             android:title="@string/item_gestion_videojuegos" />
 
         <item
             android:id="@+id/item_cerar_sesion"
-            android:icon="@drawable/categorias"
+            android:icon="@drawable/ic_power_settings"
             android:title="@string/item_cerrar_sesion" />
 
     </group>
